--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "inquirer": "^8.2.4",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.3.5"
   }
 }
